Add vacancies likes
